<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:rowCount="4"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kategori_ipa"
            android:layout_columnWeight="1"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/cyan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kategori_ipa"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kategori_ips"
            android:layout_columnWeight="1"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/cyan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kategori_ips"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kategori_sd"
            android:layout_columnWeight="1"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/cyan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kategori_sd_ma"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kategori_smp"
            android:layout_columnWeight="1"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/cyan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kategori_smp_mts"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_kategori_sma"
            android:layout_columnWeight="1"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/cyan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kategori_sma_smk"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</ScrollView>